<resources>

    <string name="app_name">Tasks</string>

    <!-- Log in and register strings -->
    <string name="login_username_txt">Username</string>
    <string name="login_password_txt">Password</string>
    <string name="login_sign_up_text">Sign up</string>
    <string name="login_login_text">Log in</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_name">Enter name</string>
    <string name="register_email">Enter e-mail</string>
    <string name="register_password">Enter password</string>
    <string name="register_confirm_pass">Confirm password</string>
    <string name="register_pass_conditions">Passwords must be between 6-22 characters and contain one number.</string>
    <string name="register_next">Next</string>
    <string name="register_example_email">email@android.com</string>

    <!-- Register successful screen -->
    <string name="register_success_title">Registration successful</string>
    <string name="register_success_welcome">Welcome to Tasks!</string>
    <string name="register_success_get_started">Get started</string>

    <!-- New task page strings -->
    <string name="new_task_title">New Task</string>
    <string name="new_task_duedate">Due date</string>
    <string name="new_task_priority">Priority</string>
    <string name="new_task_tag">Tag</string>
    <string name="new_task_default_date">Select a date</string>
    <string name="new_task_default_priority">Select a priority</string>

    <string name="new_task_select_priority">Select priority</string>
    <string name="low_priority">Low</string>
    <string name="med_priority">Medium</string>
    <string name="high_priority">High</string>

    <!-- Menu -->
    <string name="action_settings">Setting</string>
    <string name="action_sortBy">Sort by</string>
    <string name="action_filterBy">Filter by</string>

    <!-- Navigation bar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_tasks_title">All</string>
    <string name="nav_overdue_title">Overdue</string>
    <string name="nav_today_title">Today</string>
    <string name="nav_tomorrow_title">Tomorrow</string>
    <string name="nav_complete_title">Complete</string>
    <string name="nav_more_title">More</string>
    <string name="nav_profile_title">Profile</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_rateus_title">Rate us!</string>

    <!-- Pref -->
    <string name="pref_title">Settings</string>
    <string name="pref_account">Account</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Blue</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_help">Help</string>
    <string name="pref_help_summary">Visit our help center</string>
    <string name="pref_about">About</string>
    <string name="pref_logout">Log out</string>
    <string name="pref_logout_summary"></string>

    <!-- Pref Account -->
    <string name="pref_acc_title_personal">Personal</string>
    <string name="pref_acc_name">Display name</string>
    <string name="pref_acc_name_default">Example name here</string>
    <string name="pref_acc_name_placeholder">Enter name</string>
    <string name="pref_acc_email">Email</string>
    <string name="pref_acc_email_default">android@email.com</string>
    <string name="pref_acc_email_placeholder">Enter email</string>
    <string name="pref_acc_pass">Password</string>
    <string name="pref_acc_enter_pass">Enter password here</string>
    <string name="pref_acc_icon">Display icon</string>
    <string name="pref_acc_title_emails">Emails</string>
    <string name="pref_sub_email">Subscribed emails</string>
    <string name="pref_sub_email_summary">Manage your email subscriptions</string>
    <string name="pref_sub_email_allow">Email updates</string>
    <string name="pref_sub_email_allow_status">You\'re signed up for email updates from us!</string>

    <!-- Pref Notifications -->
    <string name="pref_notif_enable">Enable notifications</string>
    <string name="pref_notif_ringtone">Ringtone</string>
    <string name="pref_notif_ringtone_summary"></string>
    <string name="pref_notif_vibrate">Vibrate</string>

    <!-- Pref about -->
    <string name="pref_about_social">Social</string>
    <string name="pref_about_google">Follow us on Google+</string>
    <string name="pref_about_feedback">Send feedback</string>
    <string name="pref_about_feedback_summary">Help us improve our app!</string>
    <string name="pref_about_legal">Legal</string>
    <string name="pref_about_desc">Task mobile application created by Manjyot Sandhu, student at Royal Holloway 2018, for a final year project.</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_version_no">1.0</string>
    <string name="pref_about_policy">Private Policy</string>
    <string name="pref_about_terms">Terms and Conditions</string>

    <!-- Pref help -->
    <string name="pref_help_desc">In the case where the application is implemented by a company in a real life scenario, this page would navigate the user to their relevant FAQ web page. </string>

    <!-- Main task page -->
    <string name="main_empty_overdue">No overdue tasks</string>
    <string name="main_empty_today">No tasks due today</string>
    <string name="main_empty_tomorrow">No tasks due tomorrow</string>
    <string name="main_empty_complete">No complete tasks</string>

    <!-- Needs refactoring -->


    <!-- Settings page -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings_tab_basic">SettingsTabBasic</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Settings tab 1 -->
    <string name="settings_icon">Icon</string>
    <string name="settings_displayName">Display Name</string>
    <string name="settings_logout">Log out</string>
    <string name="title_activity_settings_test">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
