<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manjyot.app1.RegisterSuccessActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/phoneicon"
            android:tint="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_success_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/register_success_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_success_welcome"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/register_success_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_success_get_started"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/forwardarrow"
            android:drawableTint="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>
</RelativeLayout>
