<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.manjyot.app1.LoginActivity">

    <LinearLayout
        android:id="@+id/center_point"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/center_point"
        android:gravity="center">

        <ImageView
            android:id="@+id/logInLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:srcCompat="@drawable/logoimg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/center_point"
        android:gravity="center"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/login_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/accountcircleicon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorLightGrey"
            android:hint="@string/login_username_txt"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="20dp"
            android:textSize="18sp"
            android:shadowColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/lockicon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorLightGrey"
            android:hint="@string/login_password_txt"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/login_reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_vertical"
                android:text="@string/login_sign_up_text"
                android:textColor="@color/colorDarkGrey"
                android:background="@android:color/transparent"/>


            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:text="@string/login_login_text"
                android:textColor="@color/colorDarkGrey"
                android:drawableRight="@drawable/forwardarrow"
                android:drawableTint="@color/colorDarkGrey"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>

