<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.manjyot.app1.NewTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:title="@string/new_task_title"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageButton
                    android:id="@+id/cancel_new_task_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/backarrow" />

            </android.support.v7.widget.Toolbar>

            <EditText
                android:id="@+id/new_task_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/new_task_title"
                android:paddingBottom="15dp"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/dueDateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        app:srcCompat="@drawable/calendaricon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorDarkGrey"
                        android:text="@string/new_task_duedate" />

                    <TextView
                        android:id="@+id/new_task_date_choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        android:text="@string/new_task_default_date" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/priorityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        app:srcCompat="@drawable/abouticon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorDarkGrey"
                        android:text="@string/new_task_priority" />

                    <TextView
                        android:id="@+id/new_task_priority_choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        android:text="@string/new_task_default_priority" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        app:srcCompat="@drawable/tagicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorDarkGrey"
                        android:text="@string/new_task_tag" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_new_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/tickicon" />

</android.support.design.widget.CoordinatorLayout>
