<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.manjyot.app1.RegisterActivityPart2">

    <!-- Top bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Top bar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_2_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:padding="30dp"
                android:text="John"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:padding="30dp"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/accountcircleicon" />
        </RelativeLayout>

        <!-- User entry -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/register_pass_conditions"
                android:textColor="@color/colorDarkGrey" />

            <EditText
                android:id="@+id/register_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/register_password"
                android:textColor="@color/colorDarkGrey"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/register_pass_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/register_confirm_pass"
                android:textColor="@color/colorDarkGrey"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/greyBackground">

        <ImageButton
            android:id="@+id/prev_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:background="@android:color/transparent"
            android:tint="@color/colorDarkGrey"
            app:srcCompat="@drawable/backarrow" />

        <Button
            android:id="@+id/finish_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:padding="20dp"
            android:background="@android:color/transparent"
            android:text="@string/register_title"
            android:textColor="@color/colorDarkGrey"/>

    </RelativeLayout>
</RelativeLayout>
